--- a/index.scss
+++ b/index.scss
@@ -728,6 +728,10 @@ html {
   .footerheading{
     width: 70%;
   }
+
+  .bannersecondheading{
+    text-align: center;
+  }
 }
 
 @media (max-width: 500px) {
