--- a/index.css
+++ b/index.css
@@ -674,6 +674,9 @@ html {
   .footerheading {
     width: 70%;
   }
+  .bannersecondheading {
+    text-align: center;
+  }
 }
 @media (max-width: 500px) {
   #navbar #logo img {
